# kursovaja

./: CMakeLists.txt
examples/: color_change_triangle.cpp  glad_examp.cpp
kursovaja/: CMakeLists.txt
kursovaja/kursovaja/: CMakeLists.txt  kursovaja.cpp  kursovaja.h
src/: IntoTheVoidEngine3D_header.h  console.cpp
src/include/: Camera.h  Window_header.h  console_commands.h  console_ui.h  graphics.h  graphics_editor.h  keyboard.h  objects.h  objectss.h  resources_generator.h  texture_manager.cpp
src/include/shaders/vertex/: container-shader.vs
